# my-finance-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp/: __init__.py  mcp_server.py  weekly_report.py
mcp/monobank/: __init__.py  client.py
mcp/wise/: __init__.py  client.py
mcp_servers/monobank/: client.py  server.py
mcp_servers/wise/wise/: client.py  server.py
scripts/: generate_weekly_report.py  test_mcp_server.py
